--- a/workspace/ISC4U1/.classpath
+++ b/workspace/ISC4U1/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="D:/Documents/School/ICS4U1/becker.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
